sankey map - fixed legend entries out of bounds

--- a/repair/static/css/flowmap.css
+++ b/repair/static/css/flowmap.css
@@ -69,6 +69,20 @@ div.sankeymaptooltip {
     max-width: 50%;
 }
 
+/*legend tends to get really big (bottom right)*/
+.leaflet-right.leaflet-legend {
+    overflow: auto;
+    max-height: 50%;
+    pointer-events: all;
+}
+.leaflet-fullscreen-on .leaflet-right.leaflet-legend {
+    max-width: 20%;
+}
+.leaflet-right.leaflet-legend .leaflet-control {
+    margin-right: 0px;
+}
+
+
 .leaflet-control{
     max-width: 100%;
 }
